links jump to correct locations

--- a/style.css
+++ b/style.css
@@ -1,39 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 
-/* medium gray: #131619;
-dark gray: #111217;
-light gray for text: #CCCCDC;
-Blue: #336BE4; */
 
-/* .top.scrolled {
-    color:#000;
-    text-shadow: 0px 0px 2px #fff;
-    opacity:1;
-  }
-
-.top {
-    position: fixed;
-    background-color: rgba(255,255,255,0.5);
-    text-align: center;
-    bottom:1.5rem;
-    right:1.5rem;
-    width:3rem;
-    height:3rem;
-    line-height: 3rem;
-    font-size:1.5rem;
-    border-radius: .5rem;
-    border:1px solid white;
-    box-shadow: 0 0 2px 0px white;
-    transition: opacity 1s ease;
-    opacity:0;
-    cursor: pointer;
-  } */
+html {
+    scroll-padding-top: 90px;
+}
 
 body {
     background-color: #111217;
     margin: 0px;
-    padding-top:20px;
 }
 
 nav {
@@ -74,13 +49,13 @@ nav li a {
 }
 
 #header {
-    margin: 0px auto;
-    margin-top: 100px;
+    margin: 16px auto;
+    margin-top: 90px;
     padding: 10px 0px;
     width: 70%;
-    background-color: #171A1E;
+    /* background-color: #171A1E;
     border-radius: 8px;
-    box-shadow: 0px 0px 10px black;
+    box-shadow: 0px 0px 10px black; */
 }
 
 #header img {
@@ -122,15 +97,17 @@ h1  {
     font-family:  'Varela Round', sans-serif;
     font-size: 24px;
     letter-spacing: 1px;
+    text-align: center;
 }
 
 #about {
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
     background-color: #171A1E;
-    margin: 0px auto;
-    margin-top: 20px;
-    padding: 10px;
+    padding: 10px 20px;
+    margin: 16px auto;
+    /* margin-top: 20px; */
+    
     background-color: #171A1E;
     border-radius: 8px;
     box-shadow: 0px 0px 10px black;
@@ -143,11 +120,11 @@ h1  {
 
 #team {
     text-align:center;
-    margin: 0px auto;
+    margin: 16px auto;
     background-color: #171A1E;
     border-radius: 8px;
     box-shadow: 0px 0px 10px black;
-    padding-top: 20px;
+    padding: 10px 20px;
     margin-top: 20px;
     margin-bottom: 40px;
 }
@@ -172,14 +149,11 @@ h1  {
 
 #features {
     text-align:center;
-    margin: 0px auto;
+    margin: 16x auto;
     background-color: #171A1E;
     border-radius: 8px;
     box-shadow: 0px 0px 10px black;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin-top: 20px;
-    margin-bottom: 40px;
+    padding: 10px 20px;
 }
 
 p {
